Update week 2 Assignment SQL Notebook for Peer Assignment.ipynb

--- a/week 2 Assignment SQL Notebook for Peer Assignment.ipynb
+++ b/week 2 Assignment SQL Notebook for Peer Assignment.ipynb
@@ -664,7 +664,7 @@
     }
    ],
    "source": [
-    "%sql SELECT Booster_Version, payload, COUNT(payload) FROM SPACEXTBL WHERE customer LIKE '%NASA%' GROUP BY Booster_Version"
+    "%sql SELECT Booster_Version, PAYLOAD_MASS__KG_, COUNT(payload) FROM SPACEXTBL WHERE customer LIKE '%NASA%' GROUP BY Booster_Version"
    ]
   },
   {
